--- a/spec/index.html
+++ b/spec/index.html
@@ -14,7 +14,7 @@
         <script src="../umd/index.js"></script>
         <script>
 
-            $ = manhattanEssentials;
+            const $ = manhattanEssentials;
 
             // Manipulation
             const essentialDiv = $.create('div', {'id': 'essential'})
